--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="img/love.ico">
+  <meta name="description" content=" Need Love? Let's Love Ourselves First! ">
+  <meta name="author" content="861178483">
 
-  <title>John Doe - Business Administration</title>
+  <title> Carmella Lindo - Psychology </title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none"> Carmella Lindo </span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/carmellalindo.png" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,27 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Carmella Lindo
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Psychology</div>
+        <p class="lead mb-4"><br><br>
 
-        Enter bio here<br><br>
+        
+        Hello! My name is Carmella Lindo. I am here to help you seek love.BUT with love, you must love yourself first. Find out everything you need to know about yourself to be able to seek love in others. Remembering having someone special is important. But having control over yourself is priority! Let's do it together!<br><br>
 
-        Enter bio here
+        
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
-            <i class="fab fa-linkedin-in"></i>
+          <a target="_blank" id="socialicon-1" href="https://www.youtube.com/watch?v=iOHdZKDldIg">
+            <i class="fab fa-youtube"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/carmellalindo">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
-            <i class="fab fa-twitter"></i>
+          <a target="_blank" id="socialicon-3" href="https://instagram.com/mommyofangels_">
+            <i class="fab fa-instagram"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="mailto:clind032@ucr.edu">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -95,9 +96,9 @@
             <h3 class="mb-0">Developer</h3>
             <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Customized clothing, hats and cups of self love<br> 
+              • Speaker for self affirmations<br>
+              • <br>
             </p>
           </div>
           <div class="resume-date text-md-right">
@@ -107,33 +108,34 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <h3 class="mb-0">Daycare Assistant Manager</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Childcare</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Responsible for helping with homework<br>
+              • Taking the children to and from school<br>
+              • Feeding the children all of their meals throughout the day<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">March 2012 - March 2019</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Customer Service Coordinator</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">Marshalls</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Responsible for making sure the customer were happy with their service<br>
+            • Checked out customers in a timely and friendly matter<br>
+            • Maintained registers and cashiers in the front end<br>
+            • Kept everything clean and put together while assisting with cashiers<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary">January 2013 - January 2017</span>
           </div>
         </div>
 
@@ -152,33 +154,33 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">Psychology</div>
+            <div>Working on BA</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">September 2021 - Present</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
+            <h3 class="mb-0">Crafton Hills College</h3>
+            <div class="subheading mb-3">Multiple Sciences</div>
+            <div>Received AS</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
+            <span class="text-primary">August 2017 - May 2021</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
+            <h3 class="mb-0">Crafton Hills College</h3>
+            <div class="subheading mb-3">Social Sciences</div>
+            <div>Received AA</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary">August 2017 - May 2021</span>
           </div>
         </div>
 
@@ -191,7 +193,10 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/daycare.png" width="500px">
+            <img src="img/pic2.JPG" width="500px"><br>
+            <img src="img/daycaree.png" width="500px">
+            <img src="img/pic.JPG" width="500px"><br>
         </center>
       </div>
     </section>
